--- a/requirements.txt
+++ b/requirements.txt
@@ -6,33 +6,33 @@
 #
 asttokens==2.4.1
     # via stack-data
-blinker==1.8.2
+blinker==1.9.0
     # via flask
-boto3==1.34.106
+boto3==1.35.71
     # via ccs-digitalmarketplace-utils
-botocore==1.34.158
+botocore==1.35.71
     # via
     #   boto3
     #   s3transfer
-cachelib==0.1.1
+cachelib==0.13.0
     # via flask-session
-ccs-digitalmarketplace-apiclient==29.5.0
+ccs-digitalmarketplace-apiclient==29.10.0
     # via
     #   -r requirements.in
     #   ccs-digitalmarketplace-utils
 ccs-digitalmarketplace-utils==69.0.0
     # via -r requirements.in
-certifi==2024.7.4
+certifi==2024.8.30
     # via requests
-cffi==1.16.0
+cffi==1.17.1
     # via cryptography
-charset-normalizer==3.3.2
+charset-normalizer==3.4.0
     # via requests
 click==8.1.7
     # via flask
 contextlib2==21.6.0
     # via ccs-digitalmarketplace-utils
-cryptography==43.0.1
+cryptography==44.0.0
     # via ccs-digitalmarketplace-utils
 decorator==5.1.1
     # via ipython
@@ -54,17 +54,17 @@ flask-gzip==0.2
     # via ccs-digitalmarketplace-utils
 flask-login==0.6.3
     # via ccs-digitalmarketplace-utils
-flask-session==0.6.0
+flask-session==0.8.0
     # via ccs-digitalmarketplace-utils
-flask-wtf==1.2.1
+flask-wtf==1.2.2
     # via ccs-digitalmarketplace-utils
 fleep==1.0.1
     # via ccs-digitalmarketplace-utils
 govuk-country-register==0.5.0
     # via ccs-digitalmarketplace-utils
-idna==3.8
+idna==3.10
     # via requests
-ipython==8.29.0
+ipython==8.30.0
     # via -r requirements.in
 ipython-genutils==0.2.0
     # via -r requirements.in
@@ -76,20 +76,22 @@ jedi==0.19.2
     # via ipython
 jinja2==3.1.4
     # via flask
-jmespath==0.10.0
+jmespath==1.0.1
     # via
     #   boto3
     #   botocore
 mailchimp3==3.0.21
     # via ccs-digitalmarketplace-utils
-markupsafe==2.1.4
+markupsafe==3.0.2
     # via
     #   jinja2
     #   werkzeug
     #   wtforms
 matplotlib-inline==0.1.7
     # via ipython
-notifications-python-client==8.2.0
+msgspec==0.18.6
+    # via flask-session
+notifications-python-client==10.0.0
     # via ccs-digitalmarketplace-utils
 odfpy==1.4.1
     # via ccs-digitalmarketplace-utils
@@ -103,19 +105,19 @@ ptyprocess==0.7.0
     # via pexpect
 pure-eval==0.2.3
     # via stack-data
-pycparser==2.19
+pycparser==2.22
     # via cffi
 pygments==2.18.0
     # via ipython
-pyjwt==2.4.0
+pyjwt==2.10.1
     # via notifications-python-client
 python-dateutil==2.9.0.post0
     # via botocore
 python-json-logger==2.0.7
     # via ccs-digitalmarketplace-utils
-pytz==2019.3
+pytz==2024.2
     # via ccs-digitalmarketplace-utils
-redis==5.0.1
+redis==5.2.0
     # via ccs-digitalmarketplace-utils
 requests==2.32.3
     # via
@@ -123,9 +125,9 @@ requests==2.32.3
     #   ccs-digitalmarketplace-utils
     #   mailchimp3
     #   notifications-python-client
-s3transfer==0.10.1
+s3transfer==0.10.4
     # via boto3
-six==1.14.0
+six==1.16.0
     # via
     #   asttokens
     #   python-dateutil
@@ -139,19 +141,19 @@ typing-extensions==4.12.2
     # via ipython
 unicodecsv==0.14.1
     # via ccs-digitalmarketplace-utils
-urllib3==2.2.2
+urllib3==2.2.3
     # via
     #   botocore
     #   ccs-digitalmarketplace-utils
     #   requests
 wcwidth==0.2.13
     # via prompt-toolkit
-werkzeug==3.0.6
+werkzeug==3.1.3
     # via
     #   ccs-digitalmarketplace-utils
     #   flask
     #   flask-login
 workdays==1.4
     # via ccs-digitalmarketplace-utils
-wtforms==2.3.0
+wtforms==3.2.1
     # via flask-wtf
